# i2i-interp

./: .gitignore  README.md  index.html  pyproject.toml
data/: README.md
data/datasets/: _anchor.py  _image_utils.py  _vlm_tasks.py
data/tasks/: _seed.py
experiments/: README.md
experiments/attention_knockout/: README.md  knockout_processors.py  knockout_run.py  masks.py  runner.py  sweep.py
experiments/common/: baselines.py  cli.py  file_cache.py  runner.py  tasks.py
experiments/i2i_to_i2i_patching/: README.md  build_pairs_color.py  build_pairs_dreambench_humans.py  build_pairs_style.py  i2i_to_i2i_patch.py  pair_io.py  runner.py
experiments/i2i_to_unconditional/: README.md  dump_content_vs_padding_tokens.py  i2i_to_unconditional_patch.py  runner.py
experiments/patching/: hooks.py  sweep.py  utils.py
notebooks/: _demo_utils.py  demo.ipynb
results_v4/vlm_judge/: README.md  i2i2i_color.csv  i2i2i_color_text_content.csv  i2i2i_color_text_padding.csv  i2i2i_dreambench_humans.csv  i2i2i_dreambench_humans_text_content.csv  i2i2i_dreambench_humans_text_padding.csv  i2i2i_style.csv  i2i2i_style_text_content.csv  i2i2i_style_text_padding.csv  i2i_unc_add.csv  i2i_unc_color_text_lens.csv  i2i_unc_dreambench_human_identity.csv  i2i_unc_remove.csv  i2i_unc_style_text_lens.csv  (+14 more)
scripts/: compress-video.sh  make_split_grids.py  reproduce_attention_knockout.py  reproduce_i2i_to_i2i_patching.py  reproduce_t2i_lens.py  run_judge.py  v4_status.py  verify_against_paper.py
utils/: flux2_klein.py  model_base.py  model_registry.py  scoring.py  vlm.py
(+26 files in other folders)
