[project]
name = "associations"
version = "0.1.0"
description = "Mechanistic interpretability: understanding semantic associations in diffusion models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "diffusers>=0.37.0",
    "transformers>=4.45.0",
    "nnsight>=0.6",
    "baukit",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "pillow",
    "imageio",
    "tqdm",
    "numpy",
    "seaborn",
    "packaging",
    "typing-extensions",
    "einops",
    "dash>=2.18.0",
    "anthropic>=0.97.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
baukit = { git = "https://github.com/davidbau/baukit" }
diffusers = { git = "https://github.com/huggingface/diffusers" }


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "experiments"]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "pytest>=9.0.2",
]
